[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "better_orderedmultidict"
version = "0.2.1"
authors = [
  { name="Joachim Coenen", email="joachimcoenen@icloud.com" },
]
description = "Ordered Multivalue Dictionary"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/JoachimCoenen/Better-OrderedMultiDict"
Issues = "https://github.com/JoachimCoenen/Better-OrderedMultiDict/issues"